# cch-adas

./: Cargo.toml
src/: main.rs
src/calendar/: day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  foo.sh  mod.rs
