[package]
name = "cch23-adas"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "macros"] }
base64 = "0.21.5"
chrono = "0.4.31"
image = "0.24.7"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.1", features = ["postgres", "postgres-rustls"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["uuid", "serde"] }
uuid = { version = "1.6.1", features = ["v5", "v4", "v8"] }
